# DataSet_PIPE

./: PROJECT_DOCUMENTATION.md  README.md  README_ACCESS_SOLUTION.md  SOLUTION_SUMMARY.md  TECHNICAL_DOCUMENTATION.md  TRAINING_SETUP.md  api_key_manager.py  audit_and_cleanup.py  axolotl_config.yaml  config.example.yaml  convert_judgmental_to_alpaca.py  convert_to_alpaca.py  create_judgmental_alpaca_dataset.py  docs_access_test.py  generate_judgmental_dataset.py  generate_synthetic.py  main.py  pyproject.toml  rebalance_dataset.py  replit.md  run_full_audit.py
data/: judgmental_final.jsonl  judgmental_seed.jsonl  train.jsonl
ingest/: __init__.py  chunker.py  docx_loader.py
logs/: rebalancing_summary.txt  validation_report_judgmental_final.json  validation_report_test.json  validation_report_train.json  validation_report_val.json  validation_summary.txt
modules/: alignment_engine.py  data_merger.py  document_loader.py  file_loader.py  qa_generator.py  synthetic_generator.py  text_processor.py  token_manager.py  utils.py
output/: processed_qa.jsonl
raw/: gemini_gemini-2.5-pro_batch_0_seed_ar_0000.json  gemini_gemini-2.5-pro_batch_0_seed_ar_6994.json  gemini_gemini-2.5-pro_batch_0_seed_en_0001.json  gemini_gemini-2.5-pro_batch_0_seed_en_0019.json
review/: human_review_template.csv  human_sample.jsonl
scripts/: apply_human_corrections.py  archive_files.py  archive_old_files.py  convert_aligned_to_judgmental_seed.py  create_data_splits.py  create_human_review_sample.py  qwen_analysis.py  validate_judgmental_dataset.py
synthesis/: __init__.py  (+2 more)
(+10 files in other folders)
